--- a/.github/workflows/fetch-blog-articles.yml
+++ b/.github/workflows/fetch-blog-articles.yml
@@ -1,14 +1,14 @@
-name: Latest Blog Post Workflow
+name: Latest blog post workflow
 on:
-  schedule: #
-  - cron: '0 * * * *'
-  workflow_dispatch: #
+  schedule: # Run workflow automatically
+    - cron: '0 * * * *' # Runs every hour, on the hour
+  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 jobs:
   update-readme-with-hashnode-blog:
-    name: Update this repo's readme with hashnode blog
+    name: Update this repo's README with the latest hashnode blog posts
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: gautamkrishnan/blog-post-workflow@master
+      - uses: gautamkrishnar/blog-post-workflow@master
         with:
-          feed-list: "https://jaspalscodes.hashnode.dev/rss.xml"
+          feed_list: "https://jaspalscodes.hashnode.dev/rss.xml"
